Add AJAX cart handling to prevent reload

--- a/templates/base.html
+++ b/templates/base.html
@@ -802,6 +802,7 @@
 
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'js/shop.js' %}"></script>
     <script>
         // Show toast notifications
         function showToast(message, type = 'success') {
